fix Menu button visiblte

--- a/apps/frontend/src/components/layouts/Header/Header.module.scss
+++ b/apps/frontend/src/components/layouts/Header/Header.module.scss
@@ -22,6 +22,7 @@
 
 .left {
   flex: 0 0 auto;
+  margin-left: 25px;
 }
 .logoButton {
   background: none;
@@ -59,6 +60,7 @@
 
 .right {
   flex: 0 0 auto;
+   margin-left: 25px;
 }
 
 /* =========================
